--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,10 +31,11 @@ android {
 dependencies {
     implementation 'com.facebook.react:react-native:+'
     /// https://mvnrepository.com/artifact/com.facebook.android/account-kit-sdk
-    implementation ('com.facebook.android:account-kit-sdk:4.+'){
-        exclude group: 'com.parse.bolts', module: 'bolts-android';
-        exclude group: 'com.parse.bolts', module: 'bolts-applinks';
-        exclude group: 'com.parse.bolts', module: 'bolts-tasks';
-		exclude group: "com.google.android.gms";
-    }
+    implementation ('com.facebook.android:account-kit-sdk:5.0.0');
+//    {
+//        exclude group: 'com.parse.bolts', module: 'bolts-android';
+//        exclude group: 'com.parse.bolts', module: 'bolts-applinks';
+//        exclude group: 'com.parse.bolts', module: 'bolts-tasks';
+//		exclude group: "com.google.android.gms";
+//    }
 }
